Version 3.1.1     unreleased

	* Fix bugs in the ByteQuantity changes from v3.1.0, so comparisons work properly.

Version 3.1.0     03 Aug 2015

	* Enhance ByteQuantity so it can be built from and compared to simple numeric values.
	* Improve the way the amazons3 extension deals with byte quantities.
	   - Fix configuration to support quantities like "2.5 GB", as in other extensions
	   - Improve logging using displayBytes(), so displayed quantities are more legible

Version 3.0.2     30 Jul 2015

	* Improvements based on integration testing with my own backup configuration.
	  - Fix problems with pickle by using binary open, protocol=0, fix_imports=True
	  - Be stricter with the way files are opened/closed, relying on the new 'with' idiom
	  - Make sure every file opened for use with executeCommand() uses mode "wb"

Version 3.0.1     29 Jul 2015

	* Create project in Mercurial at BitBucket, alongside Cedar Backup 2.
	* Convert to Python 3, using v2.24.2 as the basis for conversion.
	* Rename files (logs, config, executables) to use cback3 prefix rather than cback.
	* Remove support for Windows and Cygwin, which was never advertised and rarely tested.
	* Fix a variety of minor warnings from pylint 1.4.4, most of which also appeared in 2.24.2.
	* Clean up manpages and add notes about migrating to version 3.
	* Review user guide, fix broken links, make minor tweaks to wording, etc.
	* Fix long-standing bugs with pre- and post-action hooks, ported from v2.24.4.

Version 2.24.2    05 Jan 2015

	* Add optional size-limit configuration for amazons3 extension.

Version 2.24.1    07 Oct 2014

	* Implement a new tool called cback-amazons3-sync.
	* Add support for missing --diagnostics flag in cback-span script.

Version 2.23.3    03 Oct 2014

	* Add new extension amazons3 as an optional replacement for the store action.
	* Update user manual and INSTALL to clarify a few of the dependencies.
	* Fix encryption unit test that started failing due to my new GPG key.
