@@ -1,6 +1,7 @@
 Version 3.1.1     unreleased
 
 	* Fix bugs in the ByteQuantity changes from v3.1.0, so comparisons work properly.
+	* Adjust amazons3 extension to use limit ByteQuantity directly, not limit.bytes.
 
 Version 3.1.0     03 Aug 2015
 
